force-app/main/default/objects/Exl_CaseTypePicklistConfig__mdt/Exl_CaseTypePicklistConfig__mdt.object-meta.xml
<CustomObject>
    <label>CaseTypePicklistConfig</label>
    <pluralLabel>CaseTypePicklistConfigs</pluralLabel>
</CustomObject>