force-app/main/default/objects/Exl_CaseTypePicklistConfig__mdt/fields/Case_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safer Gambling</fullName>
                <default>true</default>
                <label>Safer Gambling</label>
            </value>
            <value>
                <fullName>Crown</fullName>
            </value>
            <value>
                <fullName>Police Exclusion</fullName>
            </value>
            <value>
                <fullName>Investigations</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>QLD Operators</fullName>
            </value>
            <value>
                <fullName>Asset Protection</fullName>
            </value>
            <value>
                <fullName>Reg Affairs</fullName>
            </value>
            <value>
                <fullName>AML</fullName>
            </value>
            <value>
                <fullName>The Reef (Qld)</fullName>
            </value>
            <value>
                <fullName>The Ville (Qld)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>