force-app/main/default/objects/Exl_CaseTypePicklistConfig__mdt/fields/Origin_Source__c.field-meta.xml
<CustomField>
    <fullName>Origin_Source__c</fullName>
    <label>Origin/Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>