force-app/main/default/objects/Exl_CaseTypePicklistConfig__mdt/fields/POE_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>POE_Type_Value__c</fullName>
    <label>POE Type Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>