force-app/main/default/objects/Exl_CaseTypePicklistConfig__mdt/fields/POE_Under__c.field-meta.xml
<CustomField>
    <fullName>POE_Under__c</fullName>
    <label>POE Under</label>
    <length>255</length>
    <type>Text</type>
</CustomField>