force-app/main/default/objects/Exl_CaseTypePicklistConfig__mdt/listViews/All_mappings.listView-meta.xml
<ListView>
    <fullName>All_mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>Case_Type__c</columns>
    <columns>State__c</columns>
    <columns>Origin_Source__c</columns>
    <columns>POE_Under__c</columns>
    <columns>POE_Type__c</columns>
    <columns>POE_Type_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All mappings</label>
</ListView>